apps/linkwarden/templates/linkwarden-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkwarden
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkwarden
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.13.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkwarden-data
