apps/linkwarden/templates/meilisearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  labels:
    app.kubernetes.io/name: linkwarden
    app.kubernetes.io/component: meilisearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkwarden
      app.kubernetes.io/component: meilisearch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkwarden
        app.kubernetes.io/component: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.41.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7700
              name: http
          volumeMounts:
            - name: data
              mountPath: /meili_data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: meilisearch-data
