apps/linkwarden/templates/linkwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: linkwarden
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
