apps/linkwarden/templates/meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  labels:
    app.kubernetes.io/name: linkwarden
    app.kubernetes.io/component: meilisearch
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: linkwarden
    app.kubernetes.io/component: meilisearch
  ports:
    - name: http
      protocol: TCP
      port: 7700
      targetPort: http
