apps/linkwarden/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://linkwarden.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Link archiving and bookmarking
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: linkwarden.png
    gethomepage.dev/name: Linkwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`linkwarden.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: linkwarden
          port: http
  tls: {}
